--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     
-<h1>ae code patabooo</h1>
-<h2>the code add my github</h2>    
+
+<h3> i have problem solve</h3>
+
+
+<h1>i can push to my github</h1>
+<h2>the code add my github</h2> 
+<p>habi the code</p>   
 </body>
 </html>
